P4ADEV-4260 fix junit