@@ -5,12 +5,11 @@ import it.gov.pagopa.payhub.activities.connector.classification.client.PaymentsR
 import it.gov.pagopa.payhub.activities.dto.classifications.TransferSemanticKeyDTO;
 import it.gov.pagopa.pu.classification.dto.generated.CollectionModelPaymentsReporting;
 import it.gov.pagopa.pu.classification.dto.generated.PaymentsReporting;
-import java.util.Comparator;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 
 @Lazy
@@ -52,7 +51,7 @@ public class PaymentsReportingServiceImpl implements PaymentsReportingService {
         return collectionModelPaymentsReporting.getEmbedded().getPaymentsReportings()
             .stream()
             .sorted(Comparator.comparing(PaymentsReporting::getIuv))
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
